--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ body {
   width: 100%;
   padding: 1rem;
   max-width: 200px;
+  cursor: pointer;
   transition: all ease-in-out 0.3s;
 }
 #submit:hover {
